@@ -794,6 +794,7 @@ Most actions can be issued by using a keyboard shortcut. The key bindings can be
 changed in the
 <code><a href="file:~/.dillo/keysrc">~/.dillo/keysrc</a></code> file (see the
 <a href="#keysrc">keysrc</a> section).
+To see the current key bindings go to <a href='about:keys'>about:keys</a>.
 The list of default bindings is given in the following table.
 <p>
 <table>
