@@ -2,7 +2,7 @@
  * File: about.c
  *
  * Copyright (C) 1999-2007 Jorge Arellano Cid <jcid@dillo.org>
- * Copyright (C) 2024 Rodrigo Arias Mallo <rodarima@gmail.com>
+ * Copyright (C) 2024-2025 Rodrigo Arias Mallo <rodarima@gmail.com>
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -32,6 +32,11 @@ const char *const AboutSplash=
 "    p { margin-top: 1em; }\n"
 "    ul { margin-left: 1em; }\n"
 "    li { margin-top: 0.5em; }\n"
+"    kbd {\n"
+"      display: inline-block;\n"
+"      border: solid 1px #999;\n"
+"      padding: 1px 3px;\n"
+"    }\n"
 "  </style>\n"
 "</head>\n"
 "<body>\n"
@@ -40,12 +45,12 @@ const char *const AboutSplash=
 "<h1>Quickstart</h1>\n"
 "\n"
 "<p>Welcome to Dillo " VERSION ", a small and fast graphical web browser. To\n"
-"access the help click the question mark button <code>?</code> in the top\n"
+"access the help click the question mark button <code><kbd>?</kbd></code> in the top\n"
 "right corner at any time. Here are some tips to get you started:</p>\n"
 "\n"
 "<ul>\n"
 "  <li>The main configuration file is at <code>~/.dillo/dillorc</code>.</li>\n"
-"  <li>Most actions can also be done by using the <em>keyboard</em>.</li>\n"
+"  <li>Most actions can also be done by using the <a href='about:keys'>keyboard</a>.</li>\n"
 "  <li>Cookies are <em>disabled by default</em>.</li>\n"
 "  <li>Several Dillo plugins are available.</li>\n"
 "</ul>\n"
